# cc-net

./: algorithms.py  eval_checkpoint.py  model_investigations.ipynb  pyproject.toml  run-experiment-dir.sh  sweep.py  train.py
configs/: example-encode-process-decode.yaml  example-images.yaml  example-sbm.yaml  example.yaml  run-baseline-algorithm.yaml
configs/single-runs/: LayerNorm.yaml  best-gat-mult.yaml  best-gat.yaml  best-pdhg-sbm.yaml  best-pdhg-single.yaml  pdhg-fashionmnist.yaml  pdhg-hgc-nd.yaml  pdhg-hierarchical-gaussians.yaml  pdhg-knn-gaussian.yaml  pdhg-knn-no-encoder.yaml  pdhg-knn-shallow.yaml  pdhg-knn.yaml
configs/sweeps/: change-depth-two-moons.yaml  change-depth.yaml  test_sweep.yaml
datasets/: dataset_utils.py  datasets.py
losses/: losses.py
models/: EncodeProcessDecode.py  algorithms.py  model_utils.py  models.py
notebooks/: Layer_Norm.ipynb  error_indist+ood_knn.ipynb  error_indist+ood_sbm.ipynb  hierarchical-gaussians-ssnal-warmstart-thresholds-plots.ipynb  intial-primal-dual-experiments.ipynb  mnist_analysis.ipynb  model_investigations.ipynb  multiple-graphs-one-size-1.ipynb  multiple-graphs-one-size-shallow.ipynb  multiple-graphs-one-size.ipynb  pdhg-net-warmstart-initialization-experiment.ipynb  process-changing-depth-sweep-single-graph.ipynb  process-changing-depth-sweep.ipynb  ssnal_two_moons_comparison.ipynb  supervised-multiple-knn.ipynb  test-layer.ipynb  testing.ipynb
tests/: test_model_utils.py
utils/: globals.py
wandb/sweep-0qa11jal/: config-fr3w7kcq.yaml
wandb/sweep-1elyashc/: config-s6bwq1rp.yaml  (+1 more)
(+73 files in other folders)
