[project]
name = "cc-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annoy>=1.17.3",
]

[dependency-groups]
dev = [
    "graphlearning>=1.7.5",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "shortuuid>=1.0.13",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]
